# ProrrataERV

./: .gitignore  .pdm-python  README.md  pyproject-test.toml  pyproject.toml  results.csv  t_data_0.csv
dev/: errores.csv  node_gen_template.csv  node_gen_template2.csv  notebook.ipynb
docs/: ProrrataERV.excalidraw
poc_prorrataerv/: __init__.py  extract.py  graph.py  load.py  main.py  transform.py
poc_prorrataerv/sql/: __init__.py  gen_data.sql  gen_node.sql  node_bar.sql
prorrata/: extract.py  load.py  main.py  transform.py  transform_cdc.py
prorrata/sql/: cmg_data.sql  gen_data.sql  gen_node.sql
src/prorrata/: __init__.py  main.py
src/prorrata/business/: extract.py  load.py  transform.py  transform_cdc.py
src/prorrata/cli/: __init__.py
src/prorrata/data/: __init__.py  banned.py  minstablelevel.py  plexos.py
src/prorrata/model/: accdb.py  extract.py  pmgd.py  vetadas.py
src/prorrata/utils/: gen_data.sql  gen_node.sql  inf_data.sql
src/prorrataerv/: __init__.py
src/prorrataerv/business/: extract.py  get_available_generators.py  transform_cdc.py
src/prorrataerv/cli/: config.py  main.py
src/prorrataerv/model/: banned.py  minstable.py  pmgds.py  schemas.py
src/prorrataerv/model/accdb/: __init__.py  models.py  queries.py
src/prorrataerv/model/pcp_solution/: __init__.py  models.py  queries.py  schema.py
