[tool.poetry]
name = "prorrata"
version = "1.0.3"
description = "Aplicación para la prorrata de centrales de costo variable 0 en el sistema eléctrico chileno (SEN)."
authors = ["Faso <felipe.bastidas@coordinador.cl>"]
readme = "README.md"

[tool.poetry.scripts]
prorrata = "prorrata.main:app"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.3"
sqlalchemy-access = "^2.0.2"
pyarrow = "^15.0.0"
xlsx2csv = "^0.8.2"
typer = {extras = ["all"], version = "^0.9.0"}
termgraph = "^0.5.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
duckdb = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
