[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prorrata"
version="1.3.4"
description = 'Aplicación para la prorrata de centrales de costo variable 0 en el sistema eléctrico chileno (SEN).'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Felipe Bastidas", email = "felipe.bastidas@coordinador.cl" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "polars[calamine]>=1.4.1",
    "pyodbc>=5.1.0",
    "typer[all]>=0.12.3",
    "sqlalchemy-access>=2.0.2",
]

[project.urls]
Documentation = "https://github.com/FasoCoding/ProrrataERV#readme"
Issues = "https://github.com/FasoCoding/ProrrataERV/issues"
Source = "https://github.com/FasoCoding/ProrrataERV"

[project.scripts]
prorrata = "prorrata.main:app"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
]
