[project]
name = "prorrataerv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.12.0",
    "polars>=1.12.0",
    "pydantic>=2.9.2",
    "sqlalchemy-access>=2.0.3",
    "typer>=0.12.5",
]

[project.scripts]
prorrata = "prorrataerv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
]
